--- a/misc.html
+++ b/misc.html
@@ -133,6 +133,43 @@
   background: #ffffff;
 }
 
+.zhihu-tech-card {
+  margin: 18px 0 26px 0;
+  padding: 14px 18px;
+  border-left: 3px solid #1f2a44;
+  background: linear-gradient(
+    to right,
+    #fafbfc 0%,
+    #ffffff 60%
+  );
+}
+
+.zhihu-tech-title {
+  font-weight: 600;
+  font-size: 0.95em;
+  margin-bottom: 6px;
+  color: #1f2a44;
+}
+
+.zhihu-tech-content {
+  font-size: 0.9em;
+  line-height: 1.6;
+  color: #222;
+  margin-bottom: 8px;
+}
+
+.zhihu-tech-link {
+  font-size: 0.8em;
+  color: #666;
+  text-decoration: none;
+}
+
+.zhihu-tech-link:hover {
+  color: #1f2a44;
+  text-decoration: underline;
+}
+
+
 
   </style>
 </head>
@@ -215,7 +252,74 @@
 </section>
 
 
+<section class="tech-notes">
 
+  <h3 class="tech-notes-title">技术随笔 <span>(in Chinese)</span></h3>
+
+  <div class="zhihu-tech-card">
+    <div class="zhihu-tech-title">
+      自适应控制中的持续激励条件怎么理解？
+    </div>
+
+    <a
+      href="https://www.zhihu.com/question/266601777/answer/375458125"
+      target="_blank"
+      rel="noopener"
+      class="zhihu-tech-link"
+    >
+      查看原文 · 知乎 ↗
+    </a>
+  </div>
+
+  <div class="zhihu-tech-card">
+    <div class="zhihu-tech-title">
+      状态观测器的本质是什么？如何通俗理解状态观测器？
+    </div>
+
+    <a
+      href="https://www.zhihu.com/question/64872887/answer/1983144004729214944"
+      target="_blank"
+      rel="noopener"
+      class="zhihu-tech-link"
+    >
+      查看原文 · 知乎 ↗
+    </a>
+  </div>
+
+
+<div class="zhihu-tech-card">
+  <div class="zhihu-tech-title">
+    现代控制理论中的卡尔曼滤波器与状态观测器之间有什么联系与区别？
+  </div>
+
+  <a
+    href="https://www.zhihu.com/question/65933880/answer/1983590683307708873"
+    target="_blank"
+    rel="noopener"
+    class="zhihu-tech-link"
+  >
+    查看原文 · 知乎 ↗
+  </a>
+</div>
+
+
+<div class="zhihu-tech-card">
+  <div class="zhihu-tech-title">
+    非线性观测器有几种？哪些用得比较多？分别有什么优缺点？
+  </div>
+
+  <a
+    href="https://www.zhihu.com/question/28360083/answer/262859807"
+    target="_blank"
+    rel="noopener"
+    class="zhihu-tech-link"
+  >
+    查看原文 · 知乎 ↗
+  </a>
+</div>
+
+
+</section>
 
 
 
