--- a/publication.html
+++ b/publication.html
@@ -176,7 +176,7 @@
       year={2025},
       archivePrefix={arXiv},
       primaryClass={eess.SY},
-    eprint  = {2511.06524},
+      eprint  = {2511.06524},
       url={https://arxiv.org/abs/2511.06524}, 
 }
 
@@ -208,7 +208,7 @@
   journal={arXiv preprint arXiv:2309.04154},
   eprint  = {2309.04154},
   primaryClass = {cs.RO},
-  arxiv     = {2309.04154}
+  eprint     = {2309.04154}
 }
 
 @misc{fan2024learning,
@@ -807,3 +807,4 @@ document.getElementById("pub-container").innerHTML =
 
 </body>
 </html>
+
