--- a/publication.html
+++ b/publication.html
@@ -207,15 +207,14 @@
   month   = {6},
   journal={arXiv preprint arXiv:2309.04154},
   eprint  = {2309.04154},
-  primaryClass = {cs.RO},
-  eprint     = {2309.04154}
+  primaryClass = {cs.RO}
 }
 
 @misc{fan2024learning,
   title={Learning stable koopman embeddings for identification and control},
   author={Fan, Fletcher and Yi, Bowen and Rye, David and Shi, Guodong and Manchester, Ian R},
   journal={arXiv preprint arXiv:2401.08153},
-  arxiv={2401.08153},
+  eprint={2401.08153},
   year={2024}
 }
 
@@ -807,4 +806,5 @@ document.getElementById("pub-container").innerHTML =
 
 </body>
 </html>
+
 
