--- a/awards.html
+++ b/awards.html
@@ -155,47 +155,43 @@
   <div class="gray-line"></div>
 
   <div class="grants-list">
+  
+  
+    <div class="grant-item">
+      <div class="grant-main">
+        <strong>PIED Program – Startup Grant</strong><br>
+        Polytechnique Montréal<br>
+        <em>Principal Investigator (1/1)</em><br>
+        <span class="grant-meta">2024 – 2027</span>
+      </div>
+      <div class="grant-badge">PI</div>
+    </div>
 
     <div class="grant-item">
       <div class="grant-main">
         <strong>Discovery Grant</strong><br>
         Natural Sciences and Engineering Research Council of Canada (NSERC)<br>
-        <em>Sole Principal Investigator (1/1)</em><br>
+        <em>Principal Investigator (1/1)</em><br>
         A scalable framework for nonlinear observer design in robotic systems<br>
         <span class="grant-meta">RGPIN-2024-04786 · Apr 2024 – Mar 2029</span>
       </div>
       <div class="grant-badge">PI</div>
     </div>
 
-    <div class="grant-item">
+  
+  
+      <div class="grant-item">
       <div class="grant-main">
         <strong>Discovery Early Career Research Award (DECRA)</strong><br>
         Australian Research Council<br>
-        <em>Sole Chief Investigator (1/1)</em><br>
+        <em>Chief Investigator (1/1)</em><br>
         <span class="grant-meta">2025</span>
       </div>
       <div class="grant-badge">CI</div>
     </div>
 
-    <div class="grant-item">
-      <div class="grant-main">
-        <strong>Discovery Launch Supplements</strong><br>
-        Natural Sciences and Engineering Research Council of Canada (NSERC)<br>
-        <em>Sole Principal Investigator (1/1)</em><br>
-        <span class="grant-meta">DGECR-2024-00400 · Apr 2024 – Mar 2025</span>
-      </div>
-      <div class="grant-badge">PI</div>
-    </div>
 
-    <div class="grant-item">
-      <div class="grant-main">
-        <strong>PIED Program – Startup Grant</strong><br>
-        Polytechnique Montréal<br>
-        <em>Sole Principal Investigator (1/1)</em><br>
-        <span class="grant-meta">2024 – 2027</span>
-      </div>
-      <div class="grant-badge">PI</div>
-    </div>
+
 
     <div class="grant-item">
       <div class="grant-main">
