--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@
   color: #6b7280;
   letter-spacing: 0.04em;
 }
+
+
 </style>
+
+
 
 
 </head>
@@ -291,8 +295,17 @@
 
     <div class="justified-text">
       <p>
-        I am an <strong>Assistant Professor</strong> in Automatic Control at
-        <a href="https://www.polymtl.ca/ge/">Polytechnique Montréal</a> (Faculty of Engineering of the Université de Montréal), Canada.
+I am an <strong>Assistant Professor</strong> in Automatic Control at
+<a href="https://www.polymtl.ca/ge/">Polytechnique Montréal</a>
+(Faculty of Engineering of the Université de Montréal), Canada.
+I am also affiliated with
+<a href="https://www.gerad.ca" target="_blank">GERAD</a>
+and a member of the
+<a href="https://navigator.innovation.ca/en/facility/polytechnique-montreal/mobile-robotics-and-autonomous-systems-laboratory"
+   target="_blank">
+Mobile Robotics and Autonomous Systems Laboratory
+</a>.
+
       </p>
 
       <p>
