--- a/people.html
+++ b/people.html
@@ -208,7 +208,14 @@
 </div>
 
 
-      <div class="person-card">
+
+  
+
+
+
+<div class="person-card person-with-photo">
+
+      <div class="person-info">
         <div class="person-name">Jérémy Meyer</div>
         <div class="person-role">Thesis-based Master (B.Eng. Centrale Nante)</div>
         <div class="person-desc">
@@ -220,6 +227,9 @@
   	  </a>
         </div>
       </div>
+  <img src="photos/jeremy.jpg" alt="Jérémy Meyer" class="person-photo">
+
+</div>
       
         <div class="person-card">
         <div class="person-name">Joel Aurelien Kamwa</div>
