--- a/publication.html
+++ b/publication.html
@@ -169,6 +169,25 @@
 
 <!-- ================= BibTeX DATA ================= -->
 <script type="text/plain" id="bibtex-data">
+
+@misc{Yi2026Transformability,
+  author       = {Yi, Bowen and Fang, Leyan and Ortega, Romeo},
+  title        = {On Transformability Conditions for Parameter Estimation-Based Observers in Nonlinear Systems},
+  note         = {Submitted},
+  month        = feb,
+  year         = {2026}
+}
+
+
+@misc{fan2024learning,
+  title={Learning stable koopman embeddings for identification and control},
+  author={Fan, Fletcher and Yi, Bowen and Rye, David and Shi, Guodong and Manchester, Ian R},
+  journal={arXiv preprint arXiv:2401.08153},
+  arxiv={2401.08153},
+  eprint={2401.08153},
+  year={2024}
+}
+
 @misc{gao2025inputoutputdatadrivenstabilizationcontinuoustime,
       title={Input-Output Data-Driven Stabilization of Continuous-Time Linear MIMO Systems},
       author={Gao, Haihui and Bosso, Alessandro and Wang, Lei and Saussie, David and Yi, Bowen},
@@ -176,7 +195,7 @@
       year={2025},
       archivePrefix={arXiv},
       primaryClass={eess.SY},
-      eprint  = {2511.06524},
+    eprint  = {2511.06524},
       url={https://arxiv.org/abs/2511.06524}, 
 }
 
@@ -207,16 +226,11 @@
   month   = {6},
   journal={arXiv preprint arXiv:2309.04154},
   eprint  = {2309.04154},
-  primaryClass = {cs.RO}
+  primaryClass = {cs.RO},
+  arxiv     = {2309.04154}
 }
 
-@misc{fan2024learning,
-  title={Learning stable koopman embeddings for identification and control},
-  author={Fan, Fletcher and Yi, Bowen and Rye, David and Shi, Guodong and Manchester, Ian R},
-  journal={arXiv preprint arXiv:2401.08153},
-  eprint={2401.08153},
-  year={2024}
-}
+
 
 
 
@@ -806,5 +820,3 @@ document.getElementById("pub-container").innerHTML =
 
 </body>
 </html>
-
-
